--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
-anyio==3.4.0
-asgiref==3.4.1
-click==8.0.3
-contextlib2==21.6.0
-contextvars==2.4
-dataclasses==0.6
-h11==0.12.0
-idna==3.3
-immutables==0.16
-importlib-metadata==4.8.2
-pycodestyle==2.8.0
-sniffio==1.2.0
-starlette==0.17.1
-typing_extensions==4.0.1
-uvicorn==0.16.0
-zipp==3.6.0
+anyio==4.0.0
+click==8.1.7
+exceptiongroup==1.1.3
+h11==0.14.0
+idna==3.4
+sniffio==1.3.0
+starlette==0.31.1
+typing_extensions==4.8.0
+uvicorn==0.23.2
