--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,14 @@ sniffio==1.3.0
 starlette==0.31.1
 typing_extensions==4.8.0
 uvicorn==0.23.2
+numpy==1.26.2
+pandas==2.1.3
+pytz==2023.3.post1
+python-dateutil==2.8.2
+six==1.16.0
+tzdata==2023.3
+jsonschema==4.20.0
+attrs==23.1.0
+jsonschema-specifications==2023.11.2
+referencing==0.31.1
+rpds-py==0.13.2
